nginx-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
  labels:
    app: mynginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: mynginx
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mynginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
      - name: mynginx
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
