nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mynginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mynginx
spec:
  host: mynginx
  subsets:
  - name: mynginx-v1
    labels:
      app: mynginx

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mynginx
spec:
  hosts:
  - "*"
  gateways:
  - mynginx-gateway
  http:
    - route:
      - destination:
          host: mynginx
          subset: mynginx-v1
